# mandelbrot

./: .gitmodules  CMakeLists.txt  ScopedTimer.hpp  autovec.cpp  compile_vc.sh  defs.hpp  main.cpp  mandelbrot_baseline.cpp  mandelbrot_intrinsics.cpp  mandelbrot_intrinsics2.cpp  mandelbrot_vc.cpp
